--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
-requests
-beautifulsoup4
-markdownify
-python-slugify
-tqdm
-python-dotenv
-openai
-tiktoken
-python-dotenv
+requests>=2.31.0
+beautifulsoup4>=4.12.0
+markdownify>=0.11.6
+python-slugify>=8.0.0
+tqdm>=4.65.0
+python-dotenv>=1.0.0
+openai>=1.0.0
