update: Add comprehensive logging for daily job

--- a/.github/workflows/daily-job.yml
+++ b/.github/workflows/daily-job.yml
@@ -29,9 +29,12 @@ jobs:
         run: |
           python main.py
 
-      - name: Upload logs
+      - name: Upload job logs
         if: always()
         uses: actions/upload-artifact@v4
         with:
           name: job-logs
-          path: logs
+          path: |
+            logs/
+            job_log.json
+            article_hashes.json
